// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserPicker render all segments 1`] = `
<div
  class="gio-dropdown gio-picker-dropdown"
  style="opacity: 0; pointer-events: none;"
>
  <div
    class="gio-dropdown-content"
  >
    <div
      class="gio-dropdown-arrow"
    >
      <span
        class="gio-dropdown-arrow-content"
      />
    </div>
    <div
      class="gio-dropdown-inner"
      role="tooltip"
    >
      <div
        class="gio-picker"
      >
        <div
          class="gio-picker__header"
        >
          <div
            class="gio-searchbar"
          >
            <div
              class="gio-input gio-input--middle gio-input__container"
            >
              <input
                class="gio-input__content gio-input__content-suffix"
                placeholder="搜索分群名或创建人"
                type="text"
                value=""
              />
              <div
                class="gio-input__suffix"
              >
                <span
                  class="gio-icon gio-searchbar-suffix-search"
                >
                  <svg
                    class="gio-icon-svg"
                    fill="currentColor"
                    height="16px"
                    viewBox="0 0 14.01 14"
                    width="16px"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <defs>
                      <style />
                    </defs>
                    <g>
                      <g>
                        <path
                          d="M6 1a5 5 0 11-5 5 5 5 0 015-5zm4.48 10.19a1 1 0 00-1.28-.13A5.83 5.83 0 016 12a6 6 0 115.07-2.79 1 1 0 00.13 1.26c.93 1 2.65 2.68 2.65 2.68a.49.49 0 01-.7.7z"
                          fill="currentColor"
                          fill-rule="evenodd"
                          id="search-outlined_svg__search"
                        />
                      </g>
                    </g>
                  </svg>
                </span>
              </div>
            </div>
          </div>
          <button
            class="gio-btn gio-btn-secondary gio-btn-icon-only"
            type="button"
          >
            <span
              class="gio-icon"
            >
              <svg
                class="gio-icon-svg"
                fill="currentColor"
                height="16px"
                viewBox="0 0 14 14"
                width="16px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <defs>
                  <style />
                </defs>
                <g>
                  <g>
                    <path
                      d="M6 6.51A.54.54 0 006.51 6V.49a.49.49 0 011 0V6a.54.54 0 00.49.51h5.48a.49.49 0 010 1H8a.54.54 0 00-.51.49v5.48a.49.49 0 01-1 0V8A.54.54 0 006 7.49H.49a.49.49 0 010-1z"
                      fill="currentColor"
                      fill-rule="evenodd"
                      id="plus-outlined_svg__plus"
                    />
                  </g>
                </g>
              </svg>
            </span>
          </button>
        </div>
        <div
          class="gio-tabnav gio-tabnav-line gio-tabnav-sm"
        >
          <div
            class="gio-tabnav-item"
          >
            <div
              class="gio-tabnav-item-btn"
            >
              我的
            </div>
          </div>
          <div
            class="gio-tabnav-item gio-tabnav-item-active"
          >
            <div
              class="gio-tabnav-item-btn"
            >
              全部
            </div>
          </div>
          <div
            class="gio-tabnav-ink-bar"
            style="left: 0px; width: 0px;"
          />
        </div>
        <div
          class="cascader-menu-outer gio-picker__list"
        >
          <div
            class="cascader-menu cascader-menu"
            data-deepsearch="false"
            data-depth="0"
            role="menu"
          >
            <div
              class="cascader-menu-body"
            >
              <div
                class="cascader-menu-group"
              >
                <div
                  aria-expanded="false"
                  class="cascader-menu-item"
                  data-checked="false"
                  data-child-checked="false"
                  role="menuitem"
                >
                  <div
                    aria-haspopup="false"
                    aria-pressed="false"
                    class="cascader-menu-item-inner"
                    role="button"
                    tabindex="0"
                  >
                    <div
                      class="cascader-menu-item-content"
                    >
                      <div>
                        全部用户
                      </div>
                      <div />
                    </div>
                  </div>
                  <div
                    class="gio-picker-hover-panel"
                  >
                    <div
                      class="gio-user-picker-segment"
                    >
                      <h4
                        class="gio-user-picker-segment__name"
                      >
                        全部用户
                      </h4>
                    </div>
                  </div>
                </div>
                <div
                  aria-expanded="false"
                  class="cascader-menu-item"
                  data-checked="false"
                  data-child-checked="false"
                  role="menuitem"
                >
                  <div
                    aria-haspopup="false"
                    aria-pressed="false"
                    class="cascader-menu-item-inner"
                    role="button"
                    tabindex="0"
                  >
                    <div
                      class="cascader-menu-item-content"
                    >
                      <div>
                        新用户
                      </div>
                      <div />
                    </div>
                  </div>
                  <div
                    class="gio-picker-hover-panel"
                  >
                    <div
                      class="gio-user-picker-segment"
                    >
                      <h4
                        class="gio-user-picker-segment__name"
                      >
                        新用户
                      </h4>
                    </div>
                  </div>
                </div>
                <div
                  aria-expanded="false"
                  class="cascader-menu-item"
                  data-checked="false"
                  data-child-checked="false"
                  role="menuitem"
                >
                  <div
                    aria-haspopup="false"
                    aria-pressed="false"
                    class="cascader-menu-item-inner"
                    role="button"
                    tabindex="0"
                  >
                    <div
                      class="cascader-menu-item-content"
                    >
                      <div>
                        活跃用户
                      </div>
                      <div />
                    </div>
                  </div>
                  <div
                    class="gio-picker-hover-panel"
                  >
                    <div
                      class="gio-user-picker-segment"
                    >
                      <h4
                        class="gio-user-picker-segment__name"
                      >
                        活跃用户
                      </h4>
                      <div
                        class="gio-user-picker-segment__label"
                      >
                        分群人数和占比：
                      </div>
                      <div
                        class="gio-user-picker-segment__tags"
                      >
                        <span
                          aria-hidden="true"
                          class="gio-tag gio-tag-size-middle gio-tag-type-normal"
                        >
                          <span
                            class="gio-tag-label"
                          >
                            310
                          </span>
                        </span>
                        <span
                          aria-hidden="true"
                          class="gio-tag gio-tag-size-middle gio-tag-type-normal"
                        >
                          <span
                            class="gio-tag-label"
                          >
                            1.60%
                          </span>
                        </span>
                      </div>
                      <div
                        class="gio-user-picker-segment__label"
                      >
                        创建人 & 更新时间：
                      </div>
                      <div
                        class="gio-user-picker-segment__value"
                      >
                        张三
                         | 
                        2020/05/09
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  aria-expanded="false"
                  class="cascader-menu-item"
                  data-checked="false"
                  data-child-checked="false"
                  role="menuitem"
                >
                  <div
                    aria-haspopup="false"
                    aria-pressed="false"
                    class="cascader-menu-item-inner"
                    role="button"
                    tabindex="0"
                  >
                    <div
                      class="cascader-menu-item-content"
                    >
                      <div>
                        过去7天浏览过详情页的地活跃用户
                      </div>
                      <div />
                    </div>
                  </div>
                  <div
                    class="gio-picker-hover-panel"
                  >
                    <div
                      class="gio-user-picker-segment"
                    >
                      <h4
                        class="gio-user-picker-segment__name"
                      >
                        过去7天浏览过详情页的地活跃用户
                      </h4>
                      <div
                        class="gio-user-picker-segment__label"
                      >
                        分群人数和占比：
                      </div>
                      <div
                        class="gio-user-picker-segment__tags"
                      >
                        <span
                          aria-hidden="true"
                          class="gio-tag gio-tag-size-middle gio-tag-type-normal"
                        >
                          <span
                            class="gio-tag-label"
                          >
                            32
                          </span>
                        </span>
                        <span
                          aria-hidden="true"
                          class="gio-tag gio-tag-size-middle gio-tag-type-normal"
                        >
                          <span
                            class="gio-tag-label"
                          >
                            0.20%
                          </span>
                        </span>
                      </div>
                      <div
                        class="gio-user-picker-segment__label"
                      >
                        创建人 & 更新时间：
                      </div>
                      <div
                        class="gio-user-picker-segment__value"
                      >
                        李四
                         | 
                        2020/05/11
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  aria-expanded="false"
                  class="cascader-menu-item"
                  data-checked="false"
                  data-child-checked="false"
                  role="menuitem"
                >
                  <div
                    aria-haspopup="false"
                    aria-pressed="false"
                    class="cascader-menu-item-inner"
                    role="button"
                    tabindex="0"
                  >
                    <div
                      class="cascader-menu-item-content"
                    >
                      <div>
                        过去7天低活跃的免费用户
                      </div>
                      <div />
                    </div>
                  </div>
                  <div
                    class="gio-picker-hover-panel"
                  >
                    <div
                      class="gio-user-picker-segment"
                    >
                      <h4
                        class="gio-user-picker-segment__name"
                      >
                        过去7天低活跃的免费用户
                      </h4>
                      <div
                        class="gio-user-picker-segment__label"
                      >
                        分群人数和占比：
                      </div>
                      <div
                        class="gio-user-picker-segment__tags"
                      >
                        <span
                          aria-hidden="true"
                          class="gio-tag gio-tag-size-middle gio-tag-type-normal"
                        >
                          <span
                            class="gio-tag-label"
                          >
                            0
                          </span>
                        </span>
                        <span
                          aria-hidden="true"
                          class="gio-tag gio-tag-size-middle gio-tag-type-normal"
                        >
                          <span
                            class="gio-tag-label"
                          >
                            0.00%
                          </span>
                        </span>
                      </div>
                      <div
                        class="gio-user-picker-segment__label"
                      >
                        创建人 & 更新时间：
                      </div>
                      <div
                        class="gio-user-picker-segment__value"
                      >
                        李四
                         | 
                        2020/05/11
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  aria-expanded="false"
                  class="cascader-menu-item"
                  data-checked="false"
                  data-child-checked="false"
                  role="menuitem"
                >
                  <div
                    aria-haspopup="false"
                    aria-pressed="false"
                    class="cascader-menu-item-inner"
                    role="button"
                    tabindex="0"
                  >
                    <div
                      class="cascader-menu-item-content"
                    >
                      <div>
                        过去7天访问用户
                      </div>
                      <div />
                    </div>
                  </div>
                  <div
                    class="gio-picker-hover-panel"
                  >
                    <div
                      class="gio-user-picker-segment"
                    >
                      <h4
                        class="gio-user-picker-segment__name"
                      >
                        过去7天访问用户
                      </h4>
                      <div
                        class="gio-user-picker-segment__label"
                      >
                        分群人数和占比：
                      </div>
                      <div
                        class="gio-user-picker-segment__tags"
                      >
                        <span
                          aria-hidden="true"
                          class="gio-tag gio-tag-size-middle gio-tag-type-normal"
                        >
                          <span
                            class="gio-tag-label"
                          >
                            832
                          </span>
                        </span>
                        <span
                          aria-hidden="true"
                          class="gio-tag gio-tag-size-middle gio-tag-type-normal"
                        >
                          <span
                            class="gio-tag-label"
                          >
                            4.20%
                          </span>
                        </span>
                      </div>
                      <div
                        class="gio-user-picker-segment__label"
                      >
                        创建人 & 更新时间：
                      </div>
                      <div
                        class="gio-user-picker-segment__value"
                      >
                        王武
                         | 
                        2020/05/20
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  aria-expanded="false"
                  class="cascader-menu-item"
                  data-checked="false"
                  data-child-checked="false"
                  role="menuitem"
                >
                  <div
                    aria-haspopup="false"
                    aria-pressed="false"
                    class="cascader-menu-item-inner"
                    role="button"
                    tabindex="0"
                  >
                    <div
                      class="cascader-menu-item-content"
                    >
                      <div>
                        高意向人群
                      </div>
                      <div />
                    </div>
                  </div>
                  <div
                    class="gio-picker-hover-panel"
                  >
                    <div
                      class="gio-user-picker-segment"
                    >
                      <h4
                        class="gio-user-picker-segment__name"
                      >
                        高意向人群
                      </h4>
                      <div
                        class="gio-user-picker-segment__label"
                      >
                        分群人数和占比：
                      </div>
                      <div
                        class="gio-user-picker-segment__tags"
                      >
                        <span
                          aria-hidden="true"
                          class="gio-tag gio-tag-size-middle gio-tag-type-normal"
                        >
                          <span
                            class="gio-tag-label"
                          >
                            64
                          </span>
                        </span>
                        <span
                          aria-hidden="true"
                          class="gio-tag gio-tag-size-middle gio-tag-type-normal"
                        >
                          <span
                            class="gio-tag-label"
                          >
                            0.30%
                          </span>
                        </span>
                      </div>
                      <div
                        class="gio-user-picker-segment__label"
                      >
                        创建人 & 更新时间：
                      </div>
                      <div
                        class="gio-user-picker-segment__value"
                      >
                        陈留
                         | 
                        2020/05/22
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`UserPicker render my segements 1`] = `
<div
  class="gio-picker-trigger"
  style="cursor:pointer"
>
  <div
    class="gio-input gio-input--middle gio-input__container"
  >
    <input
      aria-label="picker-value"
      class="gio-input__content gio-input__content-suffix"
      placeholder=""
      type="text"
      value=""
    />
    <div
      class="gio-input__suffix"
    >
      <span
        class="gio-icon"
      >
        <svg
          class="gio-icon-svg"
          fill="currentColor"
          height="16px"
          viewBox="0 0 14 14"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <g>
            <g>
              <path
                d="M7.39 9.51a.5.5 0 01-.78 0l-3-3.7a.51.51 0 01-.06-.53A.5.5 0 014 5h6a.5.5 0 01.45.28.51.51 0 01-.06.53z"
                fill="currentColor"
                fill-rule="evenodd"
                id="down-filled_svg__down-2"
              />
            </g>
          </g>
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`UserPicker render my segements 2`] = `
<div
  class="gio-dropdown gio-picker-dropdown"
  style="opacity: 0; pointer-events: none;"
>
  <div
    class="gio-dropdown-content"
  >
    <div
      class="gio-dropdown-arrow"
    >
      <span
        class="gio-dropdown-arrow-content"
      />
    </div>
    <div
      class="gio-dropdown-inner"
      role="tooltip"
    >
      <div
        class="gio-picker"
      >
        <div
          class="gio-picker__header"
        >
          <div
            class="gio-searchbar"
          >
            <div
              class="gio-input gio-input--middle gio-input__container"
            >
              <input
                class="gio-input__content gio-input__content-suffix"
                placeholder="搜索分群名或创建人"
                type="text"
                value=""
              />
              <div
                class="gio-input__suffix"
              >
                <span
                  class="gio-icon gio-searchbar-suffix-search"
                >
                  <svg
                    class="gio-icon-svg"
                    fill="currentColor"
                    height="16px"
                    viewBox="0 0 14.01 14"
                    width="16px"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <defs>
                      <style />
                    </defs>
                    <g>
                      <g>
                        <path
                          d="M6 1a5 5 0 11-5 5 5 5 0 015-5zm4.48 10.19a1 1 0 00-1.28-.13A5.83 5.83 0 016 12a6 6 0 115.07-2.79 1 1 0 00.13 1.26c.93 1 2.65 2.68 2.65 2.68a.49.49 0 01-.7.7z"
                          fill="currentColor"
                          fill-rule="evenodd"
                          id="search-outlined_svg__search"
                        />
                      </g>
                    </g>
                  </svg>
                </span>
              </div>
            </div>
          </div>
          <button
            class="gio-btn gio-btn-secondary gio-btn-icon-only"
            type="button"
          >
            <span
              class="gio-icon"
            >
              <svg
                class="gio-icon-svg"
                fill="currentColor"
                height="16px"
                viewBox="0 0 14 14"
                width="16px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <defs>
                  <style />
                </defs>
                <g>
                  <g>
                    <path
                      d="M6 6.51A.54.54 0 006.51 6V.49a.49.49 0 011 0V6a.54.54 0 00.49.51h5.48a.49.49 0 010 1H8a.54.54 0 00-.51.49v5.48a.49.49 0 01-1 0V8A.54.54 0 006 7.49H.49a.49.49 0 010-1z"
                      fill="currentColor"
                      fill-rule="evenodd"
                      id="plus-outlined_svg__plus"
                    />
                  </g>
                </g>
              </svg>
            </span>
          </button>
        </div>
        <div
          class="gio-tabnav gio-tabnav-line gio-tabnav-sm"
        >
          <div
            class="gio-tabnav-item gio-tabnav-item-active"
          >
            <div
              class="gio-tabnav-item-btn"
            >
              我的
            </div>
          </div>
          <div
            class="gio-tabnav-item"
          >
            <div
              class="gio-tabnav-item-btn"
            >
              全部
            </div>
          </div>
          <div
            class="gio-tabnav-ink-bar"
            style="left: 0px; width: 0px;"
          />
        </div>
        <div
          class="cascader-menu-outer gio-picker__list"
        >
          <div
            class="cascader-menu cascader-menu"
            data-deepsearch="false"
            data-depth="0"
            role="menu"
          >
            <div
              class="cascader-menu-body"
            >
              <div
                class="cascader-menu-group"
              >
                <div
                  class="cascader-menu-group-name"
                >
                  预定义
                </div>
                <div
                  aria-expanded="false"
                  class="cascader-menu-item"
                  data-checked="false"
                  data-child-checked="false"
                  role="menuitem"
                >
                  <div
                    aria-haspopup="false"
                    aria-pressed="false"
                    class="cascader-menu-item-inner"
                    role="button"
                    tabindex="0"
                  >
                    <div
                      class="cascader-menu-item-content"
                    >
                      <div>
                        全部用户
                      </div>
                      <div />
                    </div>
                  </div>
                  <div
                    class="gio-picker-hover-panel"
                  >
                    <div
                      class="gio-user-picker-segment"
                    >
                      <h4
                        class="gio-user-picker-segment__name"
                      >
                        全部用户
                      </h4>
                    </div>
                  </div>
                </div>
                <div
                  aria-expanded="false"
                  class="cascader-menu-item"
                  data-checked="false"
                  data-child-checked="false"
                  role="menuitem"
                >
                  <div
                    aria-haspopup="false"
                    aria-pressed="false"
                    class="cascader-menu-item-inner"
                    role="button"
                    tabindex="0"
                  >
                    <div
                      class="cascader-menu-item-content"
                    >
                      <div>
                        新用户
                      </div>
                      <div />
                    </div>
                  </div>
                  <div
                    class="gio-picker-hover-panel"
                  >
                    <div
                      class="gio-user-picker-segment"
                    >
                      <h4
                        class="gio-user-picker-segment__name"
                      >
                        新用户
                      </h4>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="cascader-menu-group"
              >
                <div
                  class="cascader-menu-group-name"
                >
                  其他
                </div>
                <div
                  aria-expanded="false"
                  class="cascader-menu-item"
                  data-checked="false"
                  data-child-checked="false"
                  role="menuitem"
                >
                  <div
                    aria-haspopup="false"
                    aria-pressed="false"
                    class="cascader-menu-item-inner"
                    role="button"
                    tabindex="0"
                  >
                    <div
                      class="cascader-menu-item-content"
                    >
                      <div>
                        过去7天浏览过详情页的地活跃用户
                      </div>
                      <div />
                    </div>
                  </div>
                  <div
                    class="gio-picker-hover-panel"
                  >
                    <div
                      class="gio-user-picker-segment"
                    >
                      <h4
                        class="gio-user-picker-segment__name"
                      >
                        过去7天浏览过详情页的地活跃用户
                      </h4>
                      <div
                        class="gio-user-picker-segment__label"
                      >
                        分群人数和占比：
                      </div>
                      <div
                        class="gio-user-picker-segment__tags"
                      >
                        <span
                          aria-hidden="true"
                          class="gio-tag gio-tag-size-middle gio-tag-type-normal"
                        >
                          <span
                            class="gio-tag-label"
                          >
                            32
                          </span>
                        </span>
                        <span
                          aria-hidden="true"
                          class="gio-tag gio-tag-size-middle gio-tag-type-normal"
                        >
                          <span
                            class="gio-tag-label"
                          >
                            0.20%
                          </span>
                        </span>
                      </div>
                      <div
                        class="gio-user-picker-segment__label"
                      >
                        创建人 & 更新时间：
                      </div>
                      <div
                        class="gio-user-picker-segment__value"
                      >
                        李四
                         | 
                        2020/05/11
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  aria-expanded="false"
                  class="cascader-menu-item"
                  data-checked="false"
                  data-child-checked="false"
                  role="menuitem"
                >
                  <div
                    aria-haspopup="false"
                    aria-pressed="false"
                    class="cascader-menu-item-inner"
                    role="button"
                    tabindex="0"
                  >
                    <div
                      class="cascader-menu-item-content"
                    >
                      <div>
                        过去7天低活跃的免费用户
                      </div>
                      <div />
                    </div>
                  </div>
                  <div
                    class="gio-picker-hover-panel"
                  >
                    <div
                      class="gio-user-picker-segment"
                    >
                      <h4
                        class="gio-user-picker-segment__name"
                      >
                        过去7天低活跃的免费用户
                      </h4>
                      <div
                        class="gio-user-picker-segment__label"
                      >
                        分群人数和占比：
                      </div>
                      <div
                        class="gio-user-picker-segment__tags"
                      >
                        <span
                          aria-hidden="true"
                          class="gio-tag gio-tag-size-middle gio-tag-type-normal"
                        >
                          <span
                            class="gio-tag-label"
                          >
                            0
                          </span>
                        </span>
                        <span
                          aria-hidden="true"
                          class="gio-tag gio-tag-size-middle gio-tag-type-normal"
                        >
                          <span
                            class="gio-tag-label"
                          >
                            0.00%
                          </span>
                        </span>
                      </div>
                      <div
                        class="gio-user-picker-segment__label"
                      >
                        创建人 & 更新时间：
                      </div>
                      <div
                        class="gio-user-picker-segment__value"
                      >
                        李四
                         | 
                        2020/05/11
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
